--- a/SpringWebIncludeProject/pom.xml
+++ b/SpringWebIncludeProject/pom.xml
@@ -21,6 +21,16 @@
 		</repository>
 	</repositories>
 	<dependencies>
+	   <dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.10</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.9.10</version>
+		</dependency>
 	    <!-- ojdbc8 -->
 	    <dependency>
 		    <groupId>com.oracle.database.jdbc</groupId>
