--- a/SpringWebIncludeProject/pom.xml
+++ b/SpringWebIncludeProject/pom.xml
@@ -21,6 +21,12 @@
 		</repository>
 	</repositories>
 	<dependencies>
+	    <dependency>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>selenium-java</artifactId>
+		    <version>4.17.0</version>
+		</dependency>
+	    
 	    <!-- security -->
 	    <dependency>
 		    <groupId>org.springframework.security</groupId>
